fix: insert form error in wrong position

--- a/src/app/marketplace/auction/[auctionId]/(details)/@bidding/styles.module.css
+++ b/src/app/marketplace/auction/[auctionId]/(details)/@bidding/styles.module.css
@@ -112,6 +112,10 @@
 					}
 				}
 
+				> .error .list {
+					@apply text-white;
+				}
+
 				> form {
 					@apply contents;
 
